<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- POM file generated with GWT webAppCreator -->
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mayhew3.drafttower</groupId>
  <artifactId>draft-tower</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Draft Tower</name>

  <profiles>
    <profile>
      <id>openshift</id>
      <properties>
        <jetty.port>${env.OPENSHIFT_DIY_PORT}</jetty.port>
        <jetty.host>${env.OPENSHIFT_DIY_IP}</jetty.host>
        <ws.port>8000</ws.port>
        <ws.port.ext>8000</ws.port.ext>
        <jdbc.url>jdbc:mysql://localhost:3306/uncharted</jdbc.url>
        <jdbc.user>root</jdbc.user>
        <jdbc.pass></jdbc.pass>
      </properties>
    </profile>
    <profile>
      <id>eb</id>
      <properties>
        <jetty.port>5000</jetty.port>
        <jetty.host>0.0.0.0</jetty.host>
        <ws.port>5000</ws.port>
        <ws.port.ext>80</ws.port.ext>
        <jdbc.url>jdbc:mysql://${env.RDS_HOSTNAME}:${env.RDS_PORT}/uncharted</jdbc.url>
        <jdbc.user>${env.RDS_USERNAME}</jdbc.user>
        <jdbc.pass>${env.RDS_PASSWORD}</jdbc.pass>
      </properties>
    </profile>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <jetty.port>8080</jetty.port>
        <jetty.host>0.0.0.0</jetty.host>
        <ws.port>8080</ws.port>
        <ws.port.ext>8080</ws.port.ext>
        <jdbc.url>jdbc:mysql://localhost:3306/uncharted</jdbc.url>
        <jdbc.user>root</jdbc.user>
        <jdbc.pass></jdbc.pass>
      </properties>
    </profile>
  </profiles>

  <properties>
    <!-- Convenience property to set the GWT version -->
    <gwtVersion>2.7.0</gwtVersion>
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jetty-server.version>8.1.8.v20121106</jetty-server.version>
    <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>

    <beanstalk.applicationName>${project.artifactId}</beanstalk.applicationName>
    <beanstalk.environmentName>${project.artifactId}</beanstalk.environmentName>
    <beanstalk.cnamePrefix>${project.artifactId}</beanstalk.cnamePrefix>
    <beanstalk.environmentRef>${project.artifactId}.elasticbeanstalk.com</beanstalk.environmentRef>
    <beanstalk.versionLabel>${maven.build.timestamp}</beanstalk.versionLabel>
    <beanstalk.solutionStack>64bit Amazon Linux 2015.09 v2.0.7 running Java 8</beanstalk.solutionStack>
    <beanstalk.environmentType>SingleInstance</beanstalk.environmentType>
    <beanstalk.instanceType>t2.micro</beanstalk.instanceType>
  </properties>

  <repositories>
    <repository>
      <!-- Up-to-date GWT visualization is not available in central repo. Using
              alfresco instead. -->
      <id>alfresco-repository</id>
      <url>http://maven.alfresco.com/nexus/content/repositories/activiti-thirdparty/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <version>${gwtVersion}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <version>${gwtVersion}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-codeserver</artifactId>
      <version>${gwtVersion}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.7</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>1.0.0.GA</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>1.0.0.GA</version>
      <classifier>sources</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-websocket</artifactId>
      <version>${jetty-server.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava-gwt</artifactId>
      <version>18.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.dagger</groupId>
      <artifactId>dagger</artifactId>
      <version>2.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.dagger</groupId>
      <artifactId>dagger-compiler</artifactId>
      <version>2.1</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.google.dagger</groupId>
      <artifactId>dagger-gwt</artifactId>
      <version>2.1</version>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20090211</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.22</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-mxj</artifactId>
      <version>5.0.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>4.1.5.RELEASE</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-dbcp</groupId>
      <artifactId>commons-dbcp</artifactId>
      <version>20030825.184428</version>
    </dependency>
    <dependency>
      <groupId>commons-pool</groupId>
      <artifactId>commons-pool</artifactId>
      <version>1.5.4</version>
    </dependency>
    <dependency>
      <groupId>com.googlecode.gwt-charts</groupId>
      <artifactId>gwt-charts</artifactId>
      <version>0.9.10</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.10.19</version>
    </dependency>
    <dependency>
      <groupId>org.jpmml</groupId>
      <artifactId>pmml-evaluator</artifactId>
      <version>1.1.15</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcore</artifactId>
      <version>4.3.3</version>
    </dependency>
  </dependencies>
  <build>
    <!-- Generate compiled stuff in the folder used for developing mode -->
    <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

    <plugins>

      <!-- GWT Maven Plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>${gwtVersion}</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <extraJvmArgs>-Xmx512M -Xss8M</extraJvmArgs>
            </configuration>
          </execution>
          <execution>
            <id>tests</id>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <extraJvmArgs>-Xmx512M -Xss8M -DgwtTests=true</extraJvmArgs>
            </configuration>
          </execution>
        </executions>
        <!-- Plugin configuration. There are many available options, see
          gwt-maven-plugin documentation at codehaus.org -->
        <configuration>
          <runTarget>DraftTower.html</runTarget>
          <hostedWebapp>${webappDirectory}</hostedWebapp>
          <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
        </configuration>
      </plugin>

      <!-- Copy static web files before executing gwt:run -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.2.3</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>exploded</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <webappDirectory>${webappDirectory}</webappDirectory>
          <attachClasses>true</attachClasses>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <excludes>
            <exclude>com/mayhew3/drafttower/server/database/*.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
          <excludes>
            <exclude>**/*GwtTest.java</exclude>
            <exclude>**/EndToEndTest.java</exclude>
            <exclude>**/*SimTest.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.mortbay.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>${jetty-server.version}</version>
        <configuration>
          <connectors>
            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
              <port>${jetty.port}</port>
              <host>${jetty.host}</host>
            </connector>
          </connectors>
          <systemProperties>
            <systemProperty>
              <name>ws.port</name>
              <value>${ws.port}</value>
            </systemProperty>
            <systemProperty>
              <name>ws.port.ext</name>
              <value>${ws.port.ext}</value>
            </systemProperty>
            <systemProperty>
              <name>jdbc.url</name>
              <value>${jdbc.url}</value>
            </systemProperty>
            <systemProperty>
              <name>jdbc.user</name>
              <value>${jdbc.user}</value>
            </systemProperty>
            <systemProperty>
              <name>jdbc.pass</name>
              <value>${jdbc.pass}</value>
            </systemProperty>
          </systemProperties>
          <webApp>
            <contextPath>/</contextPath>
          </webApp>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>1.3.1</version>
        <executions>
          <execution>
            <id>enforce-java</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>1.7.0</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <descriptors>
            <descriptor>src/assembly/eb-source-bundle.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>br.com.ingenieux</groupId>
        <artifactId>beanstalk-maven-plugin</artifactId>
        <version>1.4.2</version>
        <configuration>
          <s3Bucket>draft-tower</s3Bucket>
          <s3Key>${project.artifactId}/${project.build.finalName}-${maven.build.timestamp}.zip</s3Key>
          <artifactFile>${project.build.directory}/${project.build.finalName}-eb.zip</artifactFile>
        </configuration>
        <executions>
          <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
              <goal>upload-source-bundle</goal>
              <goal>create-application-version</goal>
              <goal>put-environment</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.2</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
